<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background_01"
    android:orientation="vertical"
    android:padding="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/GeneralImg"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo"/>
                <TextView
                    android:id="@+id/GeneralDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="4dp"
                    android:text="@string/general"
                    android:textColor="#ffffff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/WomenEmpowermentImage"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/women" />
                <TextView
                    android:id="@+id/WomenEmpowermentDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="4dp"
                    android:text="@string/women_empowerment"
                    android:textColor="#ffffff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/ChildrenEducationImg"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/learning"/>
                <TextView
                    android:id="@+id/ChildrenEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="4dp"
                    android:text="@string/children_education"
                    android:textColor="#ffffff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/NutritionProgramImg"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:src="@drawable/health"/>
                <TextView
                    android:id="@+id/NutritionProgramDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:text="@string/nutrition_program"
                    android:textColor="#ffffff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/WorkshopsImg"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/workshop"/>
                <TextView
                    android:id="@+id/WorkshopsDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="4dp"
                    android:text="@string/workshop"
                    android:textColor="#ffffff"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>